--- a/InventoryTracker/Views/Home/Index.cshtml
+++ b/InventoryTracker/Views/Home/Index.cshtml
@@ -7,9 +7,9 @@
     </div>
 </div>
 <div id="five" class="container">
-  <div class="row topRow">
-      <div class="col-md-9">
-          <img id="img-front" src="~/img/frontpage.jpg">
-      </div>
+  <!-- <div class="row topRow">
+      <div class="col-md-6">
+       
+      </div> -->
   </div>
 </div>
