--- a/InventoryTracker/Views/Dishes/Index.cshtml
+++ b/InventoryTracker/Views/Dishes/Index.cshtml
@@ -2,27 +2,30 @@
 @{
     Layout="_Layout";
 }
-<div class="wrapper">
-  <div class="header">
-      <h1 class="title">Dishes Index</h1>
+
+<div class="header">
+    <h1 class="title">Dishes Index</h1>
+</div>
+<div class="col-md-4"></div>
+<div class="col-md-8">
+  @if(Model.Count == 0)
+  {
+    <h4>No orders</h4>
+  }
+  @if(Model.Count != 0)
+  {
+    @foreach(Dish dish in Model)
+    {
+      <p><a href="/dishes/@dish.GetId()">@dish.GetName()</a></p>
+    }
+  }
+</div>
+<div class="row">
+  <div class="col-md-8">
+
   </div>
-  <div id="two" class="container">
-    <div class="row">
-    
-    @if(Model.Count == 0)
-    {
-      <p>No orders</p>
-    }
-    @if(Model.Count != 0)
-    {
-      @foreach(Dish dish in Model)
-      {
-        <p><a href="/dishes/@dish.GetId()">@dish.GetName()</a></p>
-      }
-    }
-    </div>
-    <div class="row">
-      <p><a href="/dishes/new">New dish<a></p>
-    </div>
+  <div class="col-md-4">
+    <a href="/dishes/new"><div class="well link"><p>New Dish</p></div></a>
   </div>
 </div>
+
