--- a/InventoryTracker/Views/TableOrders/New.cshtml
+++ b/InventoryTracker/Views/TableOrders/New.cshtml
@@ -6,12 +6,12 @@
 <div class="header">
     <h1 class="title">New Order</h1>
 </div>
-<div id="twelve" class="container">
-  <form action="/orders" method="post">
-    <label for="tableNumber">Table Number</label>
-    <input id="tableNumber" name="tableNumber" type="text" required>
-    <label for="orderDate">Date</label>
-    <input id="orderDate" name="orderDate" type="date" required value="@DateTime.Now">
-    <button type="submit">New</button>
-  </form>
-</div>
+
+<form action="/orders" method="post">
+  <label for="tableNumber">Table Number</label>
+  <input id="tableNumber" name="tableNumber" type="text" required>
+  <label for="orderDate">Date</label>
+  <input id="orderDate" name="orderDate" type="date" value="@DateTime.Now">
+  <button type="submit">New</button>
+</form>
+
