--- a/InventoryTracker/Views/TableOrders/Show.cshtml
+++ b/InventoryTracker/Views/TableOrders/Show.cshtml
@@ -8,7 +8,7 @@ Layout="_Layout";
     <div class="well long">
         <h1>Table number @Model["order"].GetTableNumber() @Model["order"].GetOrderDate()</h1>
     </div>
-    <form action="/orders/@Model["order"].GetId()/edit">
+    <form action='/orders/@Model["order"].GetId()/edit'>
         <button>Edit</button>
     </form>
     </div>
