--- a/InventoryTracker/wwwroot/css/styles.css
+++ b/InventoryTracker/wwwroot/css/styles.css
@@ -1,7 +1,21 @@
-.big{
+.left{
+    float: left;
+}
+.left-center{
+    position: relative;
+    left: 80px;
+}
+.right{
+    float: right;
+}
+big{
     height: 350px;
     width: 100%;
 
+}
+
+.long{
+    height: 120px;
 }
 
 body{
@@ -44,11 +58,38 @@ table, tr, td{
 
 td{
     text-align: center;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: #BBBBBB
 }
 
-/* .display{
+.delete{
+    margin-top: 20px;
+    background-color: rgb(206, 132, 132);
+}
+.edit{
     
-    opacity:.3;
+    background-color: #e7a572
+}
+.button-lineup{
+    height: 100px;
+}
+
+table{
+    margin-top: 50px;
+}
+.list{
+    margin-top: 50px;
+}
+
+.seperated{
+    margin-top: 5px;
+}
+
+.add{
+    background-color: rgb(93, 165, 93);
+}
+
+/* .title{
+    float: left;
 } */
