--- a/InventoryTracker/Views/Shared/_Layout.cshtml
+++ b/InventoryTracker/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                       <h4>Ingredients</h4>
                   </div></a>
                   <a href="/orders"><div class="well link">
-                      <h4>Orders</h4>
+                      <h4>Point of Sale</h4>
                   </div></a>
                   <a href="/shipments"><div class="well link">
                       <h4>Shipments</h4>
