--- a/InventoryTracker/Views/Dishes/Index.cshtml
+++ b/InventoryTracker/Views/Dishes/Index.cshtml
@@ -7,25 +7,21 @@
     <h1 class="title">Dishes Index</h1>
 </div>
 <div class="col-md-4"></div>
-<div class="col-md-8">
-  @if(Model.Count == 0)
-  {
-    <h4>No orders</h4>
-  }
-  @if(Model.Count != 0)
-  {
-    @foreach(Dish dish in Model)
+<div class="col-md-5">
+  <div class="list">
+    @if(Model.Count == 0)
     {
-      <p><a href="/dishes/@dish.GetId()">@dish.GetName()</a></p>
+      <h4>No orders</h4>
     }
-  }
-</div>
-<div class="row">
-  <div class="col-md-8">
-
+    @if(Model.Count != 0)
+    {
+      @foreach(Dish dish in Model)
+      {
+        <p><a href="/dishes/@dish.GetId()">@dish.GetName()</a></p>
+      }
+    }
   </div>
-  <div class="col-md-4">
-    <a href="/dishes/new"><div class="well link"><p>New Dish</p></div></a>
-  </div>
 </div>
-
+<div class="col-md-3">
+      <a href="/dishes/new"><div class="well link"><p>New Dish</p></div></a>
+</div>
