--- a/InventoryTracker/Views/TableOrders/Index.cshtml
+++ b/InventoryTracker/Views/TableOrders/Index.cshtml
@@ -6,23 +6,25 @@
     <h1 class="title">All Orders</h1>
 </div>
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-md-4">
 
   </div>
   <div class="col-md-5">
-    @if(Model.Count == 0)
-    {
-      <h4>No orders</h4>
-    }
-    @if(Model.Count != 0)
-    {
-      @foreach(TableOrder tableOrder in Model)
+    <div class="list">
+      @if(Model.Count == 0)
       {
-        <p><a href="/orders/@tableOrder.GetId()">Table number @tableOrder.GetTableNumber() @tableOrder.GetOrderDate().ToString("dd MMMM yyyy")</a></p>
+        <h4>No orders</h4>
       }
-    }
+      @if(Model.Count != 0)
+      {
+        @foreach(TableOrder tableOrder in Model)
+        {
+          <p><a href="/orders/@tableOrder.GetId()">Table number @tableOrder.GetTableNumber() @tableOrder.GetOrderDate().ToString("dd MMMM yyyy")</a></p>
+        }
+      }
+    </div>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-3">
     <a href="/orders/new"><div class="well link"><p>New Order</p></div></a>
   </div>
   
