--- a/InventoryTracker/Views/Shipments/Show.cshtml
+++ b/InventoryTracker/Views/Shipments/Show.cshtml
@@ -31,7 +31,7 @@
             <button type="submit">Add Ingredients</button>
         </form>
         </div>
-        <a href='/shipments/@Model["shipment"].GetId()/edit'><div class="well link stacked">
+        <a href='/shipments/@Model["shipment"].GetId()/edit'><div class="well link stacked edit">
             <h2>Edit shipment</h2>
         </div></a>
     </div>
